// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlledTextField component renders a hybrid variant 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root TextField"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
    data-shrink="false"
    for="email"
    id="email-label"
  >
    Email address
  </label>
  <div
    class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiFilledInput-input"
      id="email"
      name="Email"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`ControlledTextField component renders as textarea 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root TextField"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
    data-shrink="false"
    for="email"
    id="email-label"
  >
    Email address
  </label>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
  >
    <textarea
      aria-invalid="false"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
      id="email"
      name="Email"
      rows="1"
      style="height: 0px; overflow: hidden;"
    />
    <textarea
      aria-hidden="true"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
      readonly=""
      style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
      tabindex="-1"
    />
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="PrivateNotchedOutline-legendLabelled-11"
      >
        <span>
          Email address
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`ControlledTextField component renders correctly 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root TextField"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
    data-shrink="false"
    for="email"
    id="email-label"
  >
    Email address
  </label>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiOutlinedInput-input"
      id="email"
      name="Email"
      placeholder="e.g. lorem@ipsum.com"
      type="text"
      value=""
    />
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="PrivateNotchedOutline-legendLabelled-3"
      >
        <span>
          Email address
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`ControlledTextField component renders with an extra class 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root TextField test"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
    data-shrink="false"
    for="email"
    id="email-label"
  >
    Email address
  </label>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiOutlinedInput-input"
      id="email"
      name="Email"
      type="text"
      value=""
    />
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="PrivateNotchedOutline-legendLabelled-7"
      >
        <span>
          Email address
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`ControlledTextField component renders with left adornment 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root TextField TextField--leftAdornment"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
    data-shrink="false"
  >
    nickname
  </label>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
      name="Nickname"
      type="text"
      value=""
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
        />
      </svg>
    </div>
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="PrivateNotchedOutline-legendLabelled-15"
      >
        <span>
          nickname
        </span>
      </legend>
    </fieldset>
  </div>
  <p
    class="MuiFormHelperText-root MuiFormHelperText-contained"
  >
    Icon hint text
  </p>
</div>
`;

exports[`ControlledTextField component renders with onChange 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root TextField"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
    data-shrink="true"
  >
    nickname
  </label>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiOutlinedInput-input"
      name="Nickname"
      type="text"
      value=""
    />
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
      >
        <span>
          nickname
        </span>
      </legend>
    </fieldset>
  </div>
  <p
    class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
  >
    Icon hint text
  </p>
</div>
`;

exports[`ControlledTextField component renders with right adornment 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root TextField"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
    data-shrink="false"
  >
    nickname
  </label>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
      name="Nickname"
      type="text"
      value=""
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
        />
      </svg>
    </div>
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-17 MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="PrivateNotchedOutline-legendLabelled-19"
      >
        <span>
          nickname
        </span>
      </legend>
    </fieldset>
  </div>
  <p
    class="MuiFormHelperText-root MuiFormHelperText-contained"
  >
    Icon hint text
  </p>
</div>
`;

exports[`TextField component renders correctly 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root TextField"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
    data-shrink="false"
    for="email"
    id="email-label"
  >
    Email address
  </label>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiOutlinedInput-input"
      id="email"
      name="Email"
      placeholder="e.g. lorem@ipsum.com"
      type="text"
      value=""
    />
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-25 MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="PrivateNotchedOutline-legendLabelled-27"
      >
        <span>
          Email address
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`TextField component renders with error 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root TextField TextField--error"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-error Mui-error"
    data-shrink="false"
  >
    nickname
  </label>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
  >
    <input
      aria-invalid="true"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
      name="Nickname"
      type="text"
      value=""
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root Error"
        focusable="false"
        style="color: red;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
        />
      </svg>
    </div>
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="PrivateNotchedOutline-legendLabelled-31"
      >
        <span>
          nickname
        </span>
      </legend>
    </fieldset>
  </div>
  <p
    class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
  >
    error text
  </p>
</div>
`;
